<resources>
    <string name="app_name">WiseStudy</string>




    <string name="group_management">관리</string>
    <string name="non_group_management">상세화면</string>
    <string name="non_group_apply_button">신청</string>
    <string name="non_group_study_name">스터디 명</string>
    <string name="non_group_study_leader">스터디 장</string>
    <string name="non_group_study_field">분야</string>
    <string name="non_group_study_total_number_of_people">총인원</string>
    <string name="non_group_stduy_recreuitment">모집인원</string>
    <string name="study_search_management">스터디 찾기</string>
    <string name="study_search_item_member">인원</string>
    <string name="group_management_registertodo_button"> 일정 등록하기 </string>
    <string name="group_management_modify_button"> 그룹 수정하기 </string>
    <string name="group_management_apply_button">모집하기</string>
    <string name="group_management_currentapply_button"> 신청 현황</string>
    <string name="group_management_delete_button">그룹 삭제하기</string>
    <string name="group_management_admin">그룹원 관리</string>
    <string name="group_leader_create_study"> 공고 작성 </string>
    <string name="group_leader_create_study_write"> 작성 </string>
    <string name="group_leader_present_application">신청 현황</string>
    <string name="push_permission_ok">확인</string>
    <string name="push_permission_title">푸쉬 권한</string>
    <string name="push_permission_function">알림 기능</string>
    <string name="push_permission_studynotification">스터디 알림 권한</string>
    <string name="push_permission_lacationnotification">자신의 위치 알림 권한</string>
    <string name="memo_detail_title">메모 세부사항</string>
    <string name="group_member_detailscreen_leave">탈퇴</string>
    <string name="group_member_detailscreen_title">상세화면</string>
    <string name="group_member_detailscreen_locationcheck">스터디원 위치확인</string>

    <string name="app_menu_modify">수정</string>
    <string name="app_menu_management">관리</string>
    <string name="app_menu_save">저장</string>

    <string name="bottom_navigation_create">생성</string>
    <string name="bottom_navigation_schedule">일정</string>
    <string name="bottom_navigation_serach">검색</string>
    <string name="bottom_navigation_mypage">마이페이지</string>

</resources>
