<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar

        android:id="@+id/pushPermissionToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_permission_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pushPermissionLayout"
        android:layout_width="415dp"
        android:layout_height="643dp"
        android:background="#f1f1f1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pushPermissionToolbar">


        <TextView
            android:id="@+id/notificationFunction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:text="@string/push_permission_function"
            android:textColor="#191919"
            android:textSize="23sp"
            app:layout_constraintBottom_toTopOf="@+id/studyNotificationPermission"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/studyNotificationPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            android:text="@string/push_permission_studynotification"
            android:textColor="#707070"
            android:textSize="23sp"
            app:layout_constraintBottom_toTopOf="@+id/locationNotificationPermission"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notificationFunction" />

        <TextView
            android:id="@+id/locationNotificationPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="450dp"
            android:text="@string/push_permission_lacationnotification"
            android:textColor="#707070"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studyNotificationPermission" />

        <Switch
            android:id="@+id/studyNotificationSwitch"
            android:layout_width="92dp"
            android:layout_height="32dp"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:switchMinWidth="92dp"
            android:thumb="@drawable/switch_thumb_selector"
            android:track="@drawable/switch_track_selector"
            app:layout_constraintBottom_toTopOf="@+id/locationNotificationSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/locationNotificationSwitch"
            android:layout_width="92dp"
            android:layout_height="32dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginBottom="448dp"
            android:switchMinWidth="92dp"
            android:thumb="@drawable/switch_thumb_selector"
            android:track="@drawable/switch_track_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studyNotificationSwitch" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
